--- a/ParallelCoordinates/index.html
+++ b/ParallelCoordinates/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>Parallel Coordinates</title>
-    <script src="../../node_modules/d3/dist/d3.min.js"></script>
+    <script src="./d3.min.js"></script>
 
     <!-- Extensions Library -->
-    <script src="../../lib/tableau.extensions.1.latest.js"></script>
+    <script src="./tableau.extensions.1.latest.js"></script>
     
     <!-- Our extension's code -->
     <script src="./main.js"></script>
