using minified lib

--- a/ParallelCoordinates/index.html
+++ b/ParallelCoordinates/index.html
@@ -5,7 +5,7 @@
     <script src="./d3.min.js"></script>
 
     <!-- Extensions Library -->
-    <script src="./tableau.extensions.1.latest.js"></script>
+    <script src="./tableau.extensions.1.latest.min.js"></script>
     
     <!-- Our extension's code -->
     <script src="./main.js"></script>
